[A11y] Fixing ratio contrast on the INP badge
Fixing contrast ratio for INP and associated text in the performance
panel as it does not meet the 4:5:1 contrast-ratio. Tested in dark and
light modes.

Before: https://imgur.com/a/lIG7lVT
After: https://imgur.com/a/RGDIV91
Bug: 507107937
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/7797772
Commit-Queue: Vidal Diazleal <vidorteg@microsoft.com>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -205,8 +205,8 @@
 }
 
 .interaction-inp-chip {
-  background-color: var(--sys-color-yellow-bright);
-  color: var(--sys-color-on-yellow);
+  background-color: var(--sys-color-yellow-container);
+  color: var(--sys-color-on-yellow-container);
   padding: 0 2px;
 }
 
